fix mobile overflow

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -121,7 +121,9 @@ body {
 
 
   @media (max-width: 800px) {
-    html, body {
+    body {
     overflow-x: hidden;
+    height: 100vh;
+    min-height: 100vh;
     }
   }
